# GEN_LABO5

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  tests.cpp
sources/: Customer.cpp  Customer.h  Movie.cpp  Movie.h  Rental.cpp  Rental.h  main.cpp
sources/prices/: Price.h  PriceChildren.cpp  PriceChildren.h  PriceNewRelease.cpp  PriceNewRelease.h  PriceRegular.cpp  PriceRegular.h  price.h
tests/: MainTests.cpp  MovieTests.cpp  RentalTests.cpp  tests.cpp
tests/mock/: MockingMovie.cpp  MockingRental.cpp
